--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/react": "^6.1.20",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.4",
     "chart.js": "^4.5.1",
